--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<!--From https://codepen.io/frytyler/pen/EGdtg-->
 <head>
     <meta charset="UTF-8">
     <title>ML API</title>
@@ -10,23 +9,30 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="login">
-    <h1>Product Recommendation</h1>
+<div class="login" align="center">
+    <h1>Sentiment Based Product Recommendation System</h1>
     <!-- Main Input For Receiving Query to our ML model-->
     <form action="{{ url_for('predict')}}" method="post">
-        <label>Enter Username</label>
-        <input id="txtfield" placeholder="Enter Name here" name="txtfield" rows="2" cols="50" class="input_field"/><br>
-        <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+        <label style="font-size: 20px">Enter Username</label>
+        <input id="txtfield" placeholder="Enter username here" name="txtfield" rows="2" cols="50"/><br><br>
+        <button type="submit"
+                style="background-color: #4CAF50;border: none;border-radius: 10px;color: white;padding: 16px 32px;font-weight: bold;font-size: 20px;margin: 2px 2px;cursor: pointer;">
+            Predict
+        </button>
     </form>
 
     <br>
     <p>
     <h1 style="color:#FF0000;font-size:30px;">{{ message }}</h1></p>
     <br>
-    <h1 style="color:#3333cc;font-size:30px;">Top 5 recommended Products</h1>
-    {% for table in tables %}
-    {{table|safe}}
-    {% endfor %}
+    <h1 style="color:#3333cc;font-size:30px;">Top 5 Recommended Products for user "{{ username }}" are as below:</h1>
+    <table>
+        {% for table in tables %}
+        <TR>
+            <TD style="color:#3333cc;font-size:20px;">{{table|safe}}</TD>
+        </TR>
+        {% endfor %}
+    </table>
 </div>
 </body>
 </html>
